# scrapy-price-parser

./: README.md  pyproject.toml  scrapy.cfg
price_parser/: items.py  middlewares.py  pipelines.py  settings.py
price_parser/spiders/: fixprice.py
